[package]
name = "esctl"
version = "1.1.0"
edition = "2021"
description = "A CLI app to interact with etherscan.io API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
mockall = "0.11"
mockito = "0.31"
